<resources>
    <string name="app_name">SpeedCamLocator</string>
    <string name="title_activity_maps">SpeedCamLocator</string>
    <string name="action_settings">Paramètres</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="title_radar_fixe_switch">Radar Fixe</string>
    <string name="description_radar_fixe_switch">Afficher/Masquer les radars fixes
    </string>

    <string name="title_radar_feu_switch">Radar feu rouge</string>
    <string name="description_radar_feu_switch">Afficher/Masquer les radars de feux rouges
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_zoom_level">Niveau zoom lors du démarrage</string>
    <string-array name="pref_zoom_level">
        <item>Monde</item>
        <item>Pays</item>
        <item>Région</item>
        <item>Ville</item>
    </string-array>
    <string-array name="pref_list_values_zoom_level">
        <item>0</item>
        <item>5</item>
        <item>10</item>
        <item>15</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_widget">Widget</string>

    <string name="pref_title_alert_distance">Distance alerte</string>
    <string-array name="pref_alert_distance_titles">
        <item>200</item>
        <item>300</item>
        <item>500</item>
        <item>700</item>
        <item>800</item>
        <item>1000</item>
    </string-array>
    <string-array name="pref_alert_distance_values">
        <item>200</item>
        <item>300</item>
        <item>500</item>
        <item>700</item>
        <item>800</item>
        <item>1000</item>
    </string-array>

    <string name="title_widget_alerte_audio">Alerte audio</string>
    <string name="title_widget_alerte_vibreur">Alerte vibreur</string>
    <string name="description_widget_alerte_vibreur">"Vibrer lors de l\'approche d'un radar"</string>
    <string name="description_widget_alerte_audio">"Alertes sonores lors de l\'approche d'un radar"</string>

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications (A supprimer !!!!!!!!!) </string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
