<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <ListPreference
        android:defaultValue="500"
        android:entries="@array/pref_alert_distance_titles"
        android:entryValues="@array/pref_alert_distance_values"
        android:key="pref_alert_distance"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_alert_distance" />

    <!-- This preference simply launches an intent when selected. Use this UI sparingly, per
         design guidelines. -->
    <SwitchPreference
        android:defaultValue="true"
        android:key="widget_alerte_audio_fixe_switch"
        android:summary="@string/description_widget_alerte_audio"
        android:title="@string/title_widget_alerte_audio" />

    <SwitchPreference
        android:defaultValue="true"
        android:key="widget_alerte_vibreur_switch"
        android:summary="@string/description_widget_alerte_vibreur"
        android:title="@string/title_widget_alerte_vibreur" />

</PreferenceScreen>
